--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,11 @@
 
   <!-- Add your site or application content here -->
   <div id="content">
-    <div id="title">[<span class="colored">b</span>itwise <span class="colored">c</span>reative]</div>
-    <a id="email" href="mailto:work.with.us@iliastech.com">work.with.us@bitwise-creative.com</a>
+    <div id="title">
+      [<span class="colored">b</span>itwise <span class="colored">c</span>reative]
+      <div>Formerly <img src="img/ilias.svg"/></div>
+    </div>
+    <a id="email" href="mailto:work.with.us@bitwise-creative.com">work.with.us@bitwise-creative.com</a>
   </div>
 
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
