Started adding Ilias logo

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,15 @@
 
   <!-- Add your site or application content here -->
   <div id="content">
-    <div id="title">
+    <div id="title" class="branded slide-in">
       [<span class="colored">b</span>itwise <span class="colored">c</span>reative]
-      <div>Formerly <img src="img/ilias.svg"/></div>
     </div>
-    <a id="email" href="mailto:work.with.us@bitwise-creative.com">work.with.us@bitwise-creative.com</a>
+    <div id="subtitle" class="slide-in">
+      Formerly <img src="img/ilias.svg"/>
+    </div>
+    <a id="email" class="slide-in" href="mailto:work.with.us@bitwise-creative.com">
+      work.with.us@bitwise-creative.com
+    </a>
   </div>
 
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
