--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,8 @@
       [<span class="colored">b</span>itwise <span class="colored">c</span>reative]
     </div>
     <div id="subtitle" class="slide-in">
-      Formerly <img src="img/ilias.svg"/>
+      <span style="position: relative; margin-right: 5px; top: 3px;">Formerly</span>
+      <img src="img/ilias.svg" style="height: 2em"/>
     </div>
     <a id="email" class="slide-in" href="mailto:work.with.us@bitwise-creative.com">
       work.with.us@bitwise-creative.com
