--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
       <span>Formerly</span>
       <img src="img/ilias.svg"/>
     </div>
-    <a id="email" class="slide-in" href="mailto:work.with.us@bitwise-creative.com">
-      work.with.us@bitwise-creative.com
+    <div id="footer" class="slide-in" href="mailto:work.with.us@bitwisecreative.io">
+      work.with.us@bitwisecreative.io
     </a>
   </div>
 
