--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/home.css">
 
   <!-- Linked fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|PT+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -36,12 +36,8 @@
 
   <!-- Add your site or application content here -->
   <div id="content">
-    <div id="title" class="branded slide-in">
-      [<span class="colored">b</span>itwise <span class="colored">c</span>reative]
-    </div>
-    <div id="subtitle" class="slide-in faded">
-      <span>Formerly</span>
-      <img src="img/ilias.svg"/>
+    <div id="title" class="slide-in">
+      <img src="img/logo.svg"/>
     </div>
     <div id="footer" class="slide-in">
       <a href="mailto:work.with.us@bitwisecreative.io">
