Updated favicons using realfavicongenerator.net and gulp-real-favicon npm pkg

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="">
-
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127215589-1"></script>
@@ -10,48 +9,51 @@
     gtag('js', new Date());
     gtag('config', 'UA-127215589-1');
   </script>
-
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Bitwise Creative LLC</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/home.css">
-
+  
   <!-- Linked fonts -->
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-</head>
+
+  <!-- Favicons/Tiles -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png?v=KmngEdNXgy">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png?v=KmngEdNXgy">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png?v=KmngEdNXgy">
+  <link rel="manifest" href="/img/favicons/site.webmanifest?v=KmngEdNXgy">
+  <link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg?v=KmngEdNXgy" color="#54ba00">
+  <link rel="shortcut icon" href="/img/favicons/favicon.ico?v=KmngEdNXgy">
+  <meta name="apple-mobile-web-app-title" content="Bitwise Creative">
+  <meta name="application-name" content="Bitwise Creative">
+  <meta name="msapplication-TileColor" content="#16396c">
+  <meta name="msapplication-TileImage" content="/img/favicons/mstile-144x144.png?v=KmngEdNXgy">
+  <meta name="msapplication-config" content="/img/favicons/browserconfig.xml?v=KmngEdNXgy">
+  <meta name="theme-color" content="#ffffff"></head>
 
 <body>
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-
   <!-- Add your site or application content here -->
   <div id="content">
     <div id="title" class="slide-in">
-      <img src="img/logo.svg"/>
+      <img src="img/logo.svg">
     </div>
     <div id="footer" class="slide-in">
       <a href="mailto:work.with.us@bitwisecreative.io">
         work.with.us@bitwisecreative.io
       </a>
-    </a>
   </div>
-
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
   <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
   <script src="js/home.js"></script>
-</body>
-
+</div></body>
 </html>
